add test Page and README.md

--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8" />
 <meta name="referrer" content="no-referrer" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -107,14 +107,14 @@
   <div class="container flex align-center justify-between">
     
     <div>
-      <a class="gdoc-brand gdoc-header__link" href="http://localhost/">
+      <a class="gdoc-brand gdoc-header__link" href="http://localhost:1313/">
         <span class="flex align-center">
           <img
             class="gdoc-brand__img"
             src="/brand.svg"
             alt=""
           />
-          <span class="gdoc-brand__title">My New Hugo Site</span>
+          <span class="gdoc-brand__title">영국 개발자 그룹 UDG</span>
         </span>
       </a>
     </div>
@@ -139,7 +139,7 @@
         </span>
 
         <span class="gdoc-menu-header__home">
-          <a href="http://localhost/" class="gdoc-header__link">
+          <a href="http://localhost:1313/" class="gdoc-header__link">
             <svg class="gdoc-icon gdoc_home">
               <title>Back to homepage</title>
               <use xlink:href="#gdoc_home"></use>
@@ -181,7 +181,7 @@
             <div class="gdoc-error__line gdoc-error__title">Lost?</div>
             <div class="gdoc-error__line gdoc-error__code">Error 404</div>
             <div class="gdoc-error__line gdoc-error__help">
-              Seems like what you are looking for can't be found. Don't worry, we can bring you back to the <a class="gdoc-error__link" href="http://localhost/">homepage</a>.
+              Seems like what you are looking for can't be found. Don't worry, we can bring you back to the <a class="gdoc-error__link" href="http://localhost:1313/">homepage</a>.
 
             </div>
           </div>
