change the logo

--- a/public/404.html
+++ b/public/404.html
@@ -111,7 +111,7 @@
         <span class="flex align-center">
           <img
             class="gdoc-brand__img"
-            src="/brand.svg"
+            src="/Logo.svg"
             alt=""
           />
           <span class="gdoc-brand__title">영국 개발자 그룹 UDG</span>
